--- a/src/app.scss
+++ b/src/app.scss
@@ -3,3 +3,20 @@ div {
     text-transform: uppercase;
   }
 }
+.cards {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  div {
+    display: flex;
+    flex-direction: column;
+    margin: 0.5rem;
+    border: solid 1px rgba(0,0,0,0.5);
+    border-radius: 10px;
+    box-shadow: 10px 10px 10px rgba(0,0,0,0.25);
+    span {
+      display: flex;
+      margin:0.5rem 0.25rem;
+    }
+  }
+}
